--- a/src/main/resources/view/MainDashboardView.fxml
+++ b/src/main/resources/view/MainDashboardView.fxml
@@ -1,58 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="632.0" prefWidth="963.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.DashboardController">
-   <top>
-      <HBox alignment="CENTER" style="-fx-background-color: #5D9CEC; -fx-padding: 20;">
-         <Label style="-fx-text-fill: white; -fx-font-size: 24; -fx-font-weight: bold;" text="Mental Health Therapy Dashboard" />
-      </HBox>
-   </top>
+<AnchorPane fx:id="dashboardPane" prefHeight="784.0" prefWidth="1085.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.DashboardController">
 
-   <center>
-      <VBox spacing="20" style="-fx-padding: 20;">
-         <!-- Metrics Cards -->
-         <HBox alignment="CENTER" spacing="20">
-            <!-- Total Sessions Card -->
-            <VBox fx:id="sessionsCard" alignment="CENTER" prefHeight="150" prefWidth="250" style="-fx-background-color: white; -fx-background-radius: 10; -fx-padding: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 10, 0, 0, 0);">
-               <Label style="-fx-text-fill: #6c757d; -fx-font-size: 16;" text="Total Sessions" />
-               <Label fx:id="totalSessionsLabel" style="-fx-font-size: 32; -fx-font-weight: bold; -fx-text-fill: #5D9CEC;" />
-               <Label style="-fx-text-fill: #6c757d; -fx-font-size: 14;" text="This Month" />
-            </VBox>
+   <children>
 
-            <!-- Available Therapists Card -->
-            <VBox fx:id="therapistsCard" alignment="CENTER" prefHeight="150" prefWidth="250" style="-fx-background-color: white; -fx-background-radius: 10; -fx-padding: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 10, 0, 0, 0);">
-               <Label style="-fx-text-fill: #6c757d; -fx-font-size: 16;" text="Available Therapists" />
-               <Label fx:id="availableTherapistsLabel" style="-fx-font-size: 32; -fx-font-weight: bold; -fx-text-fill: #4CD1A1;" />
-               <Label style="-fx-text-fill: #6c757d; -fx-font-size: 14;" text="Active Professionals" />
-            </VBox>
+      <!-- Top Welcome Pane -->
+      <AnchorPane layoutX="44.0" layoutY="37.0" prefHeight="194.0" prefWidth="997.0" style="-fx-background-color: #5E8B7E; -fx-background-radius: 20;">
+         <children>
+            <Label layoutX="43.0" layoutY="87.0" prefHeight="42.0" prefWidth="350.0" text="Supporting Mental Wellness" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="28.0" />
+               </font>
+            </Label>
 
-            <!-- Patients Card -->
-            <VBox fx:id="patientsCard" alignment="CENTER" prefHeight="150" prefWidth="250" style="-fx-background-color: white; -fx-background-radius: 10; -fx-padding: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 10, 0, 0, 0);">
-               <Label style="-fx-text-fill: #6c757d; -fx-font-size: 16;" text="Active Patients" />
-               <Label fx:id="activePatientsLabel" style="-fx-font-size: 32; -fx-font-weight: bold; -fx-text-fill: #FF7676;" />
-               <Label style="-fx-text-fill: #6c757d; -fx-font-size: 14;" text="Currently in Therapy" />
-            </VBox>
-         </HBox>
+            <Label fx:id="timeLabel" layoutX="43.0" layoutY="10.0" prefHeight="34.0" prefWidth="251.0" textFill="WHITE">
+               <font>
+                  <Font name="System" size="18.0" />
+               </font>
+            </Label>
 
-         <!-- Charts Section -->
-         <VBox spacing="10" style="-fx-padding: 20; -fx-background-color: white; -fx-background-radius: 10; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 10, 0, 0, 0);">
-            <Label style="-fx-font-size: 18; -fx-font-weight: bold;" text="Sessions Overview" />
-            <LineChart fx:id="sessionsChart" animated="false" legendVisible="false" style="-fx-background-color: transparent;" title="Monthly Sessions">
-               <xAxis>
-                  <CategoryAxis label="Month" />
-               </xAxis>
-               <yAxis>
-                  <NumberAxis label="Number of Sessions" />
-               </yAxis>
-            </LineChart>
-         </VBox>
-      </VBox>
-   </center>
-</BorderPane>
+            <Label layoutX="43.0" layoutY="140.0" prefHeight="30.0" prefWidth="350.0" text="Healing minds, transforming lives" textFill="WHITE">
+               <font>
+                  <Font name="System Italic" size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+
+      <!-- Therapist Performance Card -->
+      <AnchorPane layoutX="731.0" layoutY="475.0" prefHeight="200.0" prefWidth="300.0" style="-fx-background-color: white;                          -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 10, 0, 0, 0);                          -fx-background-radius: 15;">
+         <children>
+            <Label layoutX="25.0" layoutY="20.0" style="-fx-font-size: 16px; -fx-font-weight: bold;" text="Therapist Performance">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
+
+            <JFXButton fx:id="checkPerformanceButton" layoutX="40.0" layoutY="130.0" onAction="#checkPerformanceButtonOnAction" prefHeight="35.0" prefWidth="220.0" style="-fx-cursor: hand; -fx-background-color: #5E8B7E;" text="Go to Check Performance" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </AnchorPane>
+
+      <!-- Medical Records Card -->
+      <AnchorPane layoutX="731.0" layoutY="261.0" prefHeight="200.0" prefWidth="300.0" style="-fx-background-color: white;                          -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 10, 0, 0, 0);                          -fx-background-radius: 15;">
+         <children>
+            <Label layoutX="25.0" layoutY="20.0" style="-fx-font-size: 16px; -fx-font-weight: bold;" text="Medical Records">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
+
+            <JFXButton fx:id="checkMedicalRecordsButton" layoutX="40.0" layoutY="130.0" onAction="#checkMedicalRecordsButtonOnAction" prefHeight="35.0" prefWidth="220.0" style="-fx-cursor: hand; -fx-background-color: #78A6A0;" text="Check Medical Records" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </AnchorPane>
+
+      <!-- Logout Button -->
+      <Button fx:id="logoutButton" layoutX="881.0" layoutY="730.0" mnemonicParsing="false" onAction="#logoutbtnOnAction" prefHeight="40.0" prefWidth="158.0" style="-fx-background-color: #5E8B7E;" text="Log Out" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Button>
+
+   </children>
+</AnchorPane>
