--- a/src/main/resources/view/MainDashboardView.fxml
+++ b/src/main/resources/view/MainDashboardView.fxml
@@ -3,6 +3,8 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -73,6 +75,11 @@
             <Font name="System Bold" size="16.0" />
          </font>
       </Button>
+      <ImageView fitHeight="479.0" fitWidth="442.0" layoutX="171.0" layoutY="261.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/dashboard-img.jpg" />
+         </image>
+      </ImageView>
 
    </children>
 </AnchorPane>
